<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-77dp"
        android:text="@string/login_activity_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/login_email"
        android:layout_width="389dp"
        android:layout_height="48dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="389dp"
        android:layout_height="48dp"
        android:layout_below="@id/login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="386dp"
        android:layout_height="48dp"
        android:layout_below="@id/login_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/login_activity_title" />

</RelativeLayout>
